Fix improper search-bar width on mobile

--- a/styles/details.less
+++ b/styles/details.less
@@ -171,4 +171,9 @@ img.profile-pic {
   .floq-list-header__filter-unemployed-switch {
     display: none !important;
   }
+
+  .floq-search-field {
+    width: auto;
+    flex-grow: 1;
+  }
 }
